[package]
name = "git-run"
version = "0.1.0"
description = "Runs a command, then writes a commit saying what was run."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
dialoguer = "0.10.4"
itertools = "0.10.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
